syntax = "proto3";
package proto.api;
option go_package = "github.com/kentro-lab/cloudy-neigh/proto/api";

// Index API
message IndexRequest {
}

message IndexResponse {}

// Search API
message SearchRequest {  
}

message SearchResponse{
}

// Main API
service CloudyNeigh {
  rpc Index (IndexRequest) returns (IndexResponse);
  rpc Search (SearchRequest) returns (SearchResponse);
}